<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.example.android.quiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="left"
            android:padding="5dp"
            android:text="@string/question1"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:enabled="true"
            android:hint="@string/q1_hint"
            android:inputType="number"
            android:maxLength="3" />

        <TextView style="@style/barStyle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="left"
            android:padding="5dp"
            android:text="@string/question2"
            android:textColor="#000000"
            android:textSize="18sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radioGroupQuestion2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q2_op1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2_option1" />

            <RadioButton
                android:id="@+id/q2_op2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2_option2" />

            <RadioButton
                android:id="@+id/q2_op3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2_option3" />

            <RadioButton
                android:id="@+id/q2_op4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2_option4" />
        </RadioGroup>

        <TextView style="@style/barStyle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="left"
            android:padding="5dp"
            android:text="@string/question3"
            android:textColor="#000000"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/q3_op1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q3_option1" />

        <CheckBox
            android:id="@+id/q3_op2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q3_option2" />

        <CheckBox
            android:id="@+id/q3_op3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q3_option3" />

        <CheckBox
            android:id="@+id/q3_op4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q3_option4" />

        <TextView style="@style/barStyle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="left"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/question4"
            android:textColor="#000000"
            android:textSize="18sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radioGroupQuestion4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q4_op1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q4_option1" />

            <RadioButton
                android:id="@+id/q4_op2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q4_option2" />

            <RadioButton
                android:id="@+id/q4_op3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q4_option3" />

            <RadioButton
                android:id="@+id/q4_op4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q4_option4" />
        </RadioGroup>

        <TextView style="@style/barStyle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="left"
            android:padding="5dp"
            android:text="@string/question5"
            android:textColor="#000000"
            android:textSize="18sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radioGroupQuestion5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q5_op1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q5_option1" />

            <RadioButton
                android:id="@+id/q5_op2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q5_option2" />

            <RadioButton
                android:id="@+id/q5_op3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q5_option3" />

            <RadioButton
                android:id="@+id/q5_op4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q5_option4" />
        </RadioGroup>

        <Button
            android:id="@+id/endQuiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:onClick="onSubmitQuiz"
            android:text="@string/ending"
            android:visibility="visible" />

<!--        <TextView
            android:id="@+id/totalAnswers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-light"
            android:padding="10dp"
            android:text="@string/totalPoints"
            android:textColor="#000000"
            android:textSize="28sp"
            android:visibility="gone" />-->

        <Button
            android:id="@+id/totalAnswers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:onClick="checkTotal"
            android:text="@string/totalPoints"
            android:visibility="gone" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:onClick="resetQuiz"
            android:text="@string/tryAgain"
            android:visibility="gone" />

    </LinearLayout>
</ScrollView>